<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/top_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/gray">

        <LinearLayout
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView

                android:layout_marginStart="30dp"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_menu"
                />

            <ImageView
                android:layout_marginHorizontal="120dp"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_rocket"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_search"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/top_part"
        android:id="@+id/middle_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue">

        <TextView
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="140dp"
            android:id="@+id/text_policies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policies"
            android:textSize="26sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginHorizontal="26dp"
            android:layout_width="350dp"
            android:layout_height="54dp"
            android:background="@drawable/bnt"
            android:text="@string/policy"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:textAllCaps="false"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="26dp"
            android:layout_width="350dp"
            android:layout_height="54dp"
            android:background="@drawable/bnt"
            android:text="@string/product_category"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:textAllCaps="false"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="26dp"
            android:layout_width="350dp"
            android:layout_height="54dp"
            android:background="@drawable/bnt"
            android:text="@string/origin_country"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:textAllCaps="false"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginHorizontal="26dp"
            android:layout_width="350dp"
            android:layout_height="54dp"
            android:background="@drawable/bnt"
            android:text="@string/brand"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:layout_marginVertical="20dp"
            android:paddingVertical="10dp"
            android:id="@+id/text_current_policies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/current_policies"
            android:textColor="@color/gray"
            android:textSize="26sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:onClick="onClickOpen"
            android:layout_width="250dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="80dp"
            android:background="@drawable/btn_red"
            android:text="@string/export_as_csv"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"/>


    </LinearLayout>

    <ImageView

        android:id="@+id/bottom_part"
        android:layout_width="420dp"
        android:layout_height="150dp"
        android:src="@drawable/img_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-5dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>